--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Я первые разместил свой код на удаленном репозиторий</h1>
     <h2>Hello World!</h2>
-    <p>Изменения, которые позже удалим</p>
+    <p>Изменения, которые позже удалим!</p>
 </body>
 </html>
