--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Я первые разместил свой код на удаленном репозиторий</h1>
     <h2>Hello World!</h2>
+    <h2>Изменения в ветке new-branch</h2>
 </body>
 </html>
