commit after cloning

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Я первые разместил свой код на удаленном репозиторий</h1>
     <h2>Hello World!</h2>
     <h2>Изменения в ветке new-branch</h2>
+    <h3>Заголовок после клонировки репозиторий</h3>
 </body>
 </html>
